@@ -40,6 +40,8 @@ VM.h                 \
 Vector.h             \
 freeproc.h           \
 Box.h                \
+TypedVector.h        \
+TypedVector.cpp      \
 ucs4string.h
 mosh_OPTS     = -D MONA_SCHEME -D USE_BOEHM_GC -Wall -D MOSH_LIB_PATH="\"@MOSH_LIB_PATH@\""
 mosh_CFLAGS   = -O2 -fomit-frame-pointer $(mosh_OPTS) -g
