@@ -101,5 +101,13 @@
     (raise ,(lambda (a) (error a)))
     (raise-continuable ,(lambda (a) (error a)))
     (with-exception-handler ,(lambda x (error "with-exception-handler not implemented")))
+    (make-vector-type ,(lambda x (error "make-vector-type not implemented")))
+    (vector-type? ,(lambda (x) (error "vector-type not implemented")))
+    (vector-type-data ,(lambda (x) (error "vector-type-data not implemented")))
+    (vector-type-instance-of? ,(lambda (x y)  (error "vector-type-instance-of not implemented")))
+    (make-typed-vector ,(lambda a (error "make-typed-vector not implemented")))
+    (typed-vector-get-nth ,(lambda a (error "typed-vector-get-nth not implemented")))
+    (typed-vector-set-nth ,(lambda a (error "typed-vector-set-nth not implemented")))
+    (typed-vector? ,(lambda a (error "typed-vector not implemented")))
+    (typed-vector-type ,(lambda a (error "typed-vector-type not implemented")))
     ))
-
