@@ -1,3 +1,7 @@
+2008-05-18  higepon  <higepon@users.sourceforge.jp>
+
+        * TypedVector.h : Added.
+
 2008-05-17  higepon  <higepon@users.sourceforge.jp>
 
         * freeproc.cpp (scheme::raiseContinuableEx): Added (raise-continuable ...).
